--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -14,6 +14,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/ig_head_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
