--- a/app/src/main/res/layout/activity_genre_details.xml
+++ b/app/src/main/res/layout/activity_genre_details.xml
@@ -19,15 +19,27 @@
         android:orientation="vertical"
         android:weightSum="6">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_margin="8dp"
-            android:layout_weight="4"
-            android:ellipsize="end"
-            android:text="@{viewModel.genreSummary}" />
+            android:layout_weight="4">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_margin="8dp"
+                android:ellipsize="end"
+                android:visibility="@{viewModel.isProgressVisible ? View.GONE : View.VISIBLE}"
+                android:text="@{viewModel.genreSummary}" />
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="@{viewModel.isProgressVisible ? View.VISIBLE : View.GONE}" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,13 +51,13 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/agd_tabs_tl"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/agd_details_vp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:viewPager="@{viewModel.fragmentList}"/>
+                app:viewPager="@{viewModel.fragmentList}" />
         </LinearLayout>
 
     </LinearLayout>
